--- a/index.html
+++ b/index.html
@@ -1,10 +1,120 @@
-
-<html>
-
+<!DOCTYPE html>
+<html lang="zh">
 <head>
-    <title>网站使用提示</title>
-</head>
- 
- sadfasdfasf
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>注册与使用说明 - taobao44.haozhenduo.com</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+      line-height: 1.6;
+    }
 
+    header {
+      background-color: #2d8cf0;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 24px;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    .section {
+      padding: 20px;
+    }
+
+    .section h2 {
+      color: #2d8cf0;
+      font-size: 20px;
+      margin-bottom: 10px;
+    }
+
+    .section p {
+      margin-bottom: 10px;
+    }
+
+    .important {
+      background-color: #fffbe6;
+      border-left: 4px solid #f90;
+      padding: 10px 15px;
+      margin: 20px 0;
+      border-radius: 4px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #888;
+    }
+
+    .code {
+      font-family: monospace;
+      background-color: #eee;
+      padding: 2px 6px;
+      border-radius: 3px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>欢迎使用 taobao44.haozhenduo.com</h1>
+  </header>
+
+  <div class="container">
+    <div class="section">
+      <h2>注册链接</h2>
+      <p>
+        点击访问：<a href="http://taobao44.haozhenduo.com" target="_blank">taobao44.haozhenduo.com</a>
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>聊天须知</h2>
+      <div class="important">
+        <p>1. 有问题请联系网站客服，<strong>淘宝基本不回复</strong>，谢谢理解。</p>
+      </div>
+    </div>
+
+    <div class="section">
+      <h2>使用方法</h2>
+      <p>1. 请先注册网站账号，<strong>邀请码：<span class="code">taobao44</span></strong>。</p>
+      <p>2. 注册成功后登录网站。</p>
+      <p>3. 淘宝下单后会获得一个 <strong>CDK</strong>，对应套餐类型（如：月卡）。</p>
+      <p>4. 在网站选择相应套餐（如：月卡），输入您的 <strong>CDK</strong> 并完成支付。</p>
+      <p>5. 支付成功后即可获取到配置方法。</p>
+    </div>
+
+    <div class="section">
+      <h2>客服支持</h2>
+      <p>有任何问题，请优先联系网站客服。感谢您的支持！</p>
+    </div>
+
+    <div class="section">
+      <h2>邀请码</h2>
+      <p><strong class="code">taobao44</strong></p>
+    </div>
+  </div>
+
+  <footer>
+    &copy; 2025 taobao44.haozhenduo.com - All rights reserved.
+  </footer>
+
+</body>
 </html>
